# dotfiles

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Rakefile  Xmodmap  Xresources  bash_profile  bashrc  conkyrc  ctags  gitconfig  gitconfig.erb  gitignore  install.py  vimrc  xinitrc
bash/: aliases  completions  config  config.backup  paths
bash/completion_scripts/: project_completion
bazaar/: bazaar.conf  ignore
devilspie/: transparent.ds
iterm/: com.googlecode.iterm2.plist
src/: CMakeLists.txt  main.cpp
vifm/: .gitignore  vifm-help.txt  vifminfo  vifmrc  vimfiles
vim/UltiSnips/: html.snippets  javascript.snippets  python.snippets
vim/syntax/: cs.vim  puppet.vim
xmonad/: .gitignore  xmobar.hs  xmonad.hs
zsh/: aliases
